# q-a-manager-app

./: readme.md
Q&AManager/: manifest.json  service-worker.js
Q&AManager/assets/styles/: accordion_stylesheet.css  backup_stylesheet.css  dialog_stylesheet.css  global_stylesheet.css  manage_stylesheet.css  navigation_stylesheet.css  search_stylesheet.css
Q&AManager/data/: config.json  example-questions.json  navigation.json  translations.json
Q&AManager/js/: backup-client.js  backup.js  categories.js  element-builders.js  global.js  index.js  manage.js  tinycolor.js
Q&AManager/pages/: backup.html  categories.html  index.html  manage.html
Server/: Cargo.toml
Server/src/: main.rs  models.rs
